--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Wuzzle</title>
+        <link rel = "stylesheet" href = "index.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        
+        <button class="start_button"><i class="fa fa-arrow-down"></i>Start Solving!</button>
     </body>
 </html>
