refactor: wrap div around button and replace underscore with dash for class name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <button class="start_button"><i class="fa fa-arrow-down"></i>Start Solving!</button>
+        <div class = "home-container">
+            <button class="start-button"><i class="fa fa-arrow-down"></i>Start Solving!</button>
+        </div>
     </body>
 </html>
