feat: add elements and styling for home page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <div class = "home-container">
+        <div class = "home-top">
+            <h1>Are you ready to solve this little wuzzle?</h1>
+        </div>
+        <hr>
+        <div class = "home-middle">
+            <p>Just press the button below and get ready to follow the steps!</p>
             <button class="start-button"><i class="fa fa-arrow-down"></i>Start Solving!</button>
+            <p>Prize at the end! What is it? I don't know!</p>
         </div>
     </body>
 </html>
