style: add whitespaces and indentation to index html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Wuzzle</title>
         <link rel = "stylesheet" href = "index.css"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel= "stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class = "home-top">
@@ -12,7 +12,9 @@
         <hr>
         <div class = "home-middle">
             <p>Just press the button below and get ready to follow the steps!</p>
-            <button class="start-button"><i class="fa fa-arrow-down"></i>Start Solving!</button>
+            <button class="start-button">
+                <i class="fa fa-arrow-down"></i> Start Solving!
+            </button>
             <p>Prize at the end! What is it? I don't know!</p>
         </div>
     </body>
