refactor: add spacing between bottom border and button and place paragraph in another div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <button class="start-button">
                 <i class="fa fa-arrow-down"></i> Start Solving!
             </button>
+        </div>
+        <div class = "home-bottom">
             <p>Prize at the end! What is it? I don't know!</p>
         </div>
     </body>
