feat: add anchor to button that sends user to part one page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         </div>
         <div class = "home-middle">
             <p>Just press the button below and get ready to follow the steps!</p>
-            <button class="start-button">
-                <i class="fa fa-arrow-down"></i> Start Solving!
-            </button>
+            <a href = "part-one.html">
+                <button class="start-button">
+                    <i class="fa fa-arrow-down"></i> Start Solving!
+                </button>
+            </a>
         </div>
         <div class = "home-bottom">
             <p>Prize at the end! What is it? I don't know!</p>
