feat: add basic radio button option for part one

--- a/part-one.html
+++ b/part-one.html
@@ -9,5 +9,15 @@
             <h1>Why is this called a wuzzle?</h1>
             <hr>
         </div>
+        <div class = "home-middle">
+            <form>
+                <input type="radio" id="answer1" name="answer" value="answer1">
+                <label for="answer">Just because</label><br>
+                <input type="radio" id="answer1" name="answer" value="answer1">
+                <label for="answer">I don't know</label><br>
+                <input type="radio" id="answer1" name="answer" value="answer1">
+                <label for="answer">Shut up I am not good at naming things!</label><br>
+            </form>
+        </div>
     </body>
 </html>
