refactor: change div names and related css

--- a/part-one.html
+++ b/part-one.html
@@ -5,11 +5,11 @@
         <link rel = "stylesheet" href = "part-one.css"/>
     </head>
     <body>
-        <div class = "home-top">
+        <div class = "part-one-top">
             <h1>Why is this called a wuzzle?</h1>
             <hr>
         </div>
-        <div class = "home-middle">
+        <div class = "part-one-middle">
             <form>
                 <input type="radio" id="answer1" name="answer" value="answer1">
                 <label for="answer">Just because</label><br>
