--- a/part-one.html
+++ b/part-one.html
@@ -12,11 +12,11 @@
         <div class = "part-one-middle">
             <form>
                 <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer">Just because</label><br>
+                <label for="answer1">Just because</label><br>
                 <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer">I don't know</label><br>
+                <label for="answer2">I don't know</label><br>
                 <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer">Shut up I am not good at naming things!</label><br>
+                <label for="answer3">Shut up I am not good at naming things!</label><br>
             </form>
         </div>
     </body>
