--- a/part-one.html
+++ b/part-one.html
@@ -3,6 +3,7 @@
     <head>
         <title>Wuzzle</title>
         <link rel = "stylesheet" href = "part-one.css"/>
+        <script src = "part-one.js"></script>
     </head>
     <body>
         <div class = "part-one-top">
@@ -11,13 +12,17 @@
         </div>
         <div class = "part-one-middle">
             <form>
-                <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer1">Just because</label><br>
-                <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer2">I don't know</label><br>
-                <input type="radio" id="answer1" name="answer" value="answer1">
-                <label for="answer3">Shut up I am not good at naming things!</label><br>
+                <input type="radio" name="answer" value="answer1">
+                <label>Just because</label><br>
+
+                <input type="radio" name="answer" value="answer2">
+                <label>I don't know</label><br>
+
+                <input type="radio" name="answer" value="answer3">
+                <label>Shut up I am not good at naming things!</label><br>
             </form>
+            <button onclick="getRadioValue()">Submit</button>
+
         </div>
     </body>
 </html>
