feat: create full part one wuzzle minus the styling

--- a/part-one.html
+++ b/part-one.html
@@ -24,12 +24,14 @@
                     </li>
                     <li>
                         <input type="radio" id = "answer3" name="answer" value="answer3">
-                        <label for = "answer3">Shut up I am not good at naming things!</label><br>
+                        <label for = "answer3">Bad at naming</label><br>
                     </li>    
                 </ul>
             </form>
-            <button class = "submit-button" onclick="getRadioValue()">Submit</button>
-
+            <button class = "submit-button" onclick="trackAnswers()">Submit</button>
+        </div>
+        <div class = "part-one-bottom">
+            <button class = "next-button" id ="next-button">Next Part</button>
         </div>
     </body>
 </html>
