feat: add part two skeleton and allow redirecting from part one

--- a/part-one.html
+++ b/part-one.html
@@ -31,7 +31,7 @@
             <button class = "submit-button" onclick="trackAnswers()">Submit</button>
         </div>
         <div class = "part-one-bottom">
-            <button class = "next-button" id ="next-button">Next Part</button>
+            <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
     </body>
 </html>
