--- a/part-two.html
+++ b/part-two.html
@@ -11,7 +11,7 @@
             <hr>
         </div>
         <div class = "part-two-middle">
-            <Dialpaid class = "dial-pad">
+            <DialPad class = "dial-pad">
                 <button class = "dial-pad-button" data-number = "1"></button>
                 <button class = "dial-pad-button" data-number = "2"></button>
                 <button class = "dial-pad-button" data-number = "3"></button>
@@ -21,7 +21,7 @@
                 <button class = "dial-pad-button" data-number = "7"></button>
                 <button class = "dial-pad-button" data-number = "8"></button>
                 <button class = "dial-pad-button" data-number = "9"></button>
-            </Dialpaid>
+            </DialPad>
         </div>
         <div class = "part-two-bottom">
         
