--- a/part-two.html
+++ b/part-two.html
@@ -3,7 +3,6 @@
     <head>
         <title>Wuzzle</title>
         <link rel = "stylesheet" href = "part-two.css"/>
-        <script src = "part-two.js"></script>
     </head>
     <body>
         <div class = "part-two-top">
@@ -24,7 +23,8 @@
             </DialPad>
         </div>
         <div class = "part-two-bottom">
-        
+            <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
+        <script src = "part-two.js"></script>
     </body>
 </html>
