feat: complete part 2 minus a bug

--- a/part-two.html
+++ b/part-two.html
@@ -7,9 +7,10 @@
     <body>
         <div class = "part-two-top">
             <h1>I guess that wasn't really that much of a wuzzle...</h1>
+            <h1>Bingo 3? <span id = "code"></span></h1>
             <hr>
         </div>
-        <div class = "part-two-middle">
+        <div class = "part-two-pads">
             <DialPad class = "dial-pad">
                 <button class = "dial-pad-button" data-number = "1"></button>
                 <button class = "dial-pad-button" data-number = "2"></button>
@@ -21,6 +22,9 @@
                 <button class = "dial-pad-button" data-number = "8"></button>
                 <button class = "dial-pad-button" data-number = "9"></button>
             </DialPad>
+        </div>
+        <div class = "part-two-reset">
+            <button class = "reset-button" onclick="reset()">Reset</button>
         </div>
         <div class = "part-two-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
