fix: use submit button as workaround to boolean flag logic for part 2 and add comments to scripts

--- a/part-two.html
+++ b/part-two.html
@@ -7,7 +7,9 @@
     <body>
         <div class = "part-two-top">
             <h1>I guess that wasn't really that much of a wuzzle...</h1>
-            <h1>Bingo 3? <span id = "code"></span></h1>
+            <h1>Bingo 3? 
+                <span id = "code"></span>
+            </h1>
             <hr>
         </div>
         <div class = "part-two-pads">
@@ -24,7 +26,9 @@
             </DialPad>
         </div>
         <div class = "part-two-reset">
+            <h2><span id = "wrong-answer">Wrong Answer!</span></h2>
             <button class = "reset-button" onclick="reset()">Reset</button>
+            <button class = "submit-button" onclick="submit()">Submit</button>
         </div>
         <div class = "part-two-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
