--- a/part-three.html
+++ b/part-three.html
@@ -3,13 +3,17 @@
     <head>
         <title>Wuzzle</title>
         <link rel = "stylesheet" href = "part-three.css"/>
+         <!-- font awesome -->
+         <link rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"    
+         />
     </head>
     <body>
         <div class = "part-three-top">
             <h1>Wow you've already solved 2!</h1>
             <hr>
         </div>
-        <div class = "modal-container">
+        <div class = "modal-button-container">
             <button class="modal-button-1">
                 One
             </button>
@@ -30,9 +34,18 @@
             <div class="modal-container">
                 <h3>
                     Click on the X button to close<br>
-                    I hope you enjoyed this window
                 </h3>
-                <button class="close-btn">
+                <button class="close-button">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="modal-overlay-2">
+            <div class="modal-container">
+                <h3>
+                    Click on the X button to close 2<br>
+                </h3>
+                <button class="close-button">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
