refactor: make file structure less doo doo

--- a/part-one.html
+++ b/part-one.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Wuzzle</title>
-        <link rel = "stylesheet" href = "part-one.css"/>
-        <script src = "part-one.js"></script>
+        <link rel = "stylesheet" href = "resources/css/part-one.css"/>
     </head>
     <body>
         <div class = "part-one-top">
@@ -33,5 +32,6 @@
         <div class = "part-one-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
+        <script src = "resources/js/part-one.js"></script>
     </body>
 </html>
