--- a/part-three.html
+++ b/part-three.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Wuzzle</title>
-        <link rel = "stylesheet" href = "part-three.css"/>
+        <link rel = "stylesheet" href = "resources/css/part-three.css"/>
          <!-- font awesome -->
          <link rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"    
@@ -58,6 +58,6 @@
         <div class = "part-three-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
-        <script src = "part-three.js"></script>
+        <script src = "resources/js/part-three.js"></script>
     </body>
 </html>
