--- a/part-two.html
+++ b/part-two.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Wuzzle</title>
-        <link rel = "stylesheet" href = "part-two.css"/>
+        <link rel = "stylesheet" href = "resources/css/part-two.css"/>
     </head>
     <body>
         <div class = "part-two-top">
@@ -33,6 +33,6 @@
         <div class = "part-two-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
-        <script src = "part-two.js"></script>
+        <script src = "resources/js/part-two.js"></script>
     </body>
 </html>
