feat: it works... but it's cursed

--- a/part-three.html
+++ b/part-three.html
@@ -11,7 +11,11 @@
     <body>
         <div class = "part-three-top">
             <h1>Wow you've already solved 2!</h1>
+            <h1>Only One is correct. Open each button, read it, close it and then submit the correct One.</h1>
             <hr>
+        </div>
+        <div class = "submission-response-container">
+            <h2><span id = "answer-response">Wrong Answer!</span></h2>
         </div>
         <div class = "modal-button-container">
             <button class="modal-button-1">
@@ -28,24 +32,44 @@
             </button>
         </div>
         <div class="field-wrap">
-            <input type="text" required autocomplete="off" />
+            <input id="answer" type="text" required autocomplete="off" />
         </div>
-        <div class="modal-overlay">
+        <div class="modal-overlay-1">
             <div class="modal-container">
-                <h3>
-                    Click on the X button to close<br>
-                </h3>
-                <button class="close-button">
+                <h2>
+                    The Rat De Puces domain is the first domain that will be conquered<br>
+                </h2>
+                <button class="close-button-1">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
         </div>
         <div class="modal-overlay-2">
             <div class="modal-container">
-                <h3>
-                    Click on the X button to close 2<br>
-                </h3>
-                <button class="close-button">
+                <h2>
+                    Shara Ishvalda is the final boss that you will face<br>
+                </h2>
+                <button class="close-button-2">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="modal-overlay-3">
+            <div class="modal-container">
+                <h2>
+                    Avgi weapons are stronger than Remnant<br>
+                </h2>
+                <button class="close-button-3">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="modal-overlay-4">
+            <div class="modal-container">
+                <h2>
+                    The majority of trading is held in Falador and the massacare occured in Varrock<br>
+                </h2>
+                <button class="close-button-4">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
