feat: finish part four

--- a/part-four.html
+++ b/part-four.html
@@ -1,33 +1,29 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Wuzzle</title>
         <link rel = "stylesheet" href = "resources/css/part-four.css"/>
     </head>
     <body>
-        <div class = "part-three-top">
+        <div class = "part-four-top">
             <h1>Maybe that was one a freebie...<br>Unlock this thing below!</h1>
             <hr>
         </div>
         <div class = "lock-container">
             <button class = "lock-dial" id = "dial-one">
-                <ul data-digit = "0">
-                </ul>
+                <span id = "digit-one">0</span>
             </button>
             <button class = "lock-dial" id = "dial-two">
-                <ul data-digit = "0">
-                </ul>
+                <span id = "digit-two">0</span>
             </button>
             <button class = "lock-dial" id = "dial-three">
-                <ul data-digit = "0">
-                </ul>
+                <span id = "digit-three">0</span>
             </button>
             <button class = "lock-dial" id = "dial-four">
-                <ul data-digit = "0">
-                </ul>
+                <span id = "digit-four">0</span>
             </button>
         </div>
-        <div class = "part-three-bottom">
+        <div class = "part-four-bottom">
             <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Next Part</button>
         </div>
         <script src = "resources/js/part-four.js"></script>
