refactor: make 2 seperate counters

--- a/part-last.html
+++ b/part-last.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class = "part-last-top">
-            <h1>And your final task...<br>Press this button 100 times please!</h1>
+            <h1>And your final task...<br><span id="top-text-break">Press this button 100 times please!</span></h1>
             <hr>
         </div>
         <div class="face-container">
