feat: draft final page and change last part tedious button text colour

--- a/final.html
+++ b/final.html
@@ -2,28 +2,11 @@
 <html>
     <head>
         <title>Wuzzle</title>
-        <link rel = "stylesheet" href = "resources/css/part-last.css"/>
+        <link rel = "stylesheet" href = "resources/css/final.css"/>
     </head>
     <body>
-        <div class = "part-last-top">
-            <h1>And your final task...<br><span id="top-text-break">Press this button 100 times please!</span></h1>
-            <hr>
-        </div>
-        <div class="face-container">
-            <div class="face">
-                <div class="eye" onclick = "secretCountCheck()"></div>
-                <div class="eye right" onclick = "secretCountCheck()"></div>
-                <div class="mouth happy"></div>
-            </div>
-        </div>
-        <div class = "part-last-middle">
-            <button class = "tedious-button" onclick="checkCount()">
-                <span>🎉</span>
-                <span id = "button-text">Press</span>
-            </button>
-        </div>
-        <div class = "part-last-bottom">
-            <button class = "next-button" id ="next-button" onclick = "goToNextPage()">Lets Go!!!!</button>
+        <div class = "final-middle">
+            <h1>Congrats! You solved everything! <br> I lied there is no prize... <br> Okay bye.</h1>
         </div>
         <script src = "resources/js/part-last.js"></script>
     </body>
